<resources>
    <string name="app_name">Calculator</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="equals">=</string>
    <string name="clear_all">AC</string>
    <string name="clear_one_symbol">C</string>
    <string name="percent">%</string>
    <string name="point">.</string>
    <string name="result">Result</string>
    <string name="my_cool_style">My cool style</string>
    <string name="material_light">Material light</string>
    <string name="material_light_action_bar_dark">Material light action bar dark</string>
    <string name="material_dark">Material dark</string>
    <string name="run_echo">run_echo</string>
    <string name="name">name</string>
</resources>