<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_One"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_Four"
        app:layout_constraintEnd_toStartOf="@id/button_Two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"/>

    <Button
        android:id="@+id/button_Two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_Five"
        app:layout_constraintEnd_toStartOf="@id/button_Three"
        app:layout_constraintStart_toEndOf="@id/button_One"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/button_Three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_Six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_Two"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"/>

    <Button
        android:id="@+id/button_Four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_Seven"
        app:layout_constraintEnd_toStartOf="@id/button_Five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_One"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"/>/>

    <Button
        android:id="@+id/button_Five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_Eight"
        app:layout_constraintEnd_toStartOf="@id/button_Six"
        app:layout_constraintStart_toEndOf="@id/button_Four"
        app:layout_constraintTop_toBottomOf="@id/button_Two"/>

    <Button
        android:id="@+id/button_Six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_Nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_Five"
        app:layout_constraintTop_toBottomOf="@id/button_Three"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"/>

    <Button
        android:id="@+id/button_Seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_Eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_Four"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"/>/>

    <Button
        android:id="@+id/button_Eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_Nine"
        app:layout_constraintStart_toEndOf="@id/button_Seven"
        app:layout_constraintTop_toBottomOf="@id/button_Five"/>

    <Button
        android:id="@+id/button_Nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_Eight"
        app:layout_constraintTop_toBottomOf="@id/button_Six"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"/>

    <Button
        android:id="@+id/button_Null"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toStartOf="@id/button_Point"
        app:layout_constraintStart_toStartOf="@id/button_Seven"
        app:layout_constraintTop_toBottomOf="@id/button_Eight"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"/>/>

    <Button
        android:id="@+id/button_Point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_point"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toEndOf="@id/button_Nine"
        app:layout_constraintStart_toEndOf="@id/button_Null"
        app:layout_constraintTop_toBottomOf="@id/button_Nine" />

</androidx.constraintlayout.widget.ConstraintLayout>